2003-06-30  Zoltan Varga  <vargaz@freemail.hu>

	* XslTransform.cs (GetStringFromDocument): Read the result using
	xsltSaveResultToString, since the XML document returned by
	applyStylesheet is missing the output processing done due to the
	usage of the xsl:output directive.

2003-06-21  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XslTransform.cs : Fixed Transform (string, string) not to call
	  File.OpenWrite() that *appends* (not truncates) existing files.

2003-06-01  Joshua Tauberer <tauberer@for.net>

	* XslTransform.cs: Cache extension object delegates
	between calls to Transform.

2003-05-28  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* XslTransform.cs: fixed NullReferenceExceptions after the last
	change (which, btw, should have included a ChangeLog entry).

2003-05-27  Joshua Tauberer <tauberer@for.net>

        * XslTransform.cs: Initial support for extension objects.
	Known issues:
		-Extension method signatures must match exactly to the
		types of parameters that the method is called with from 
		the stylesheet.

		-Node set parameters are converted to an ArrayList of
		strings.

2003-05-27  Ben Maurer <bmaurer@users.sourceforge.net>

	* XslTransform.cs: unsafe classes need unsafe!

2003-05-11  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* XslTransform.cs: fixed bug #42739.

2003-05-11  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* XslTransform.cs: fixed bug #42747.

2003-05-01  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* XslTransform.cs: flush the writers when done. Fixes bug #42040.

2003-03-10  Alan Tam <Tam@SiuLung.com>

	* XslTransform.cs: Fixed a bug when no args is passed

2003-03-10  Alan Tam <Tam@SiuLung.com>

	* XslTransform.cs: Implemented boolean, number and string parameters.
	(Node Set and Node Iterator parameters and Extension Objects are left.)
	* XsltAttributeList.cs: Loosened access modifiers.

2003-02-20  Nick Drochak <ndrochak@gol.com>

	* XslTransform.cs: Remove confusing and unused parameter.
