@@ -1,3 +1,8 @@
+2003-07-02  Zoltan Varga  <vargaz@freemail.hu>
+
+	* XslTransform.cs (Transform): Call xsltSaveResultToFilename instead
+	of first reading the result into a string to conserve memory.
+
 2003-06-30  Zoltan Varga  <vargaz@freemail.hu>
 
 	* XslTransform.cs (GetStringFromDocument): Read the result using
